--- a/apps/vite-web/tsconfig.json
+++ b/apps/vite-web/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@repo/typescript-config/base.json",
   "include": [
     "**/*",
     "**/.server/**/*",
@@ -14,14 +15,12 @@
     "jsx": "react-jsx",
     "rootDirs": [".", "./.react-router/types"],
     "baseUrl": ".",
-    "paths": {
-      "~/*": ["./app/*"]
-    },
+    "paths": {"~/*": ["./app/*"]},
     "esModuleInterop": true,
     "verbatimModuleSyntax": true,
     "noEmit": true,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true
-  }
+  },
 }
